[project]
name = "boat-search"
version = "0.1.0"
description = "Weekly Craigslist monitoring for solo circumnavigation boat candidates"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
